--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "compression": "~1.0.1",
     "connect-mongo": "^0.4.1",
     "cookie-parser": "~1.0.1",
+    "cron": "^1.0.9",
     "ejs": "~0.8.4",
     "errorhandler": "~1.0.0",
     "express": "~4.0.0",
@@ -22,6 +23,7 @@
     "passport": "~0.2.0",
     "passport-google-oauth": "latest",
     "passport-local": "~0.1.6",
+    "q": "^1.4.1",
     "serve-favicon": "~2.0.1"
   },
   "devDependencies": {
